# rustic

./: .devenv.flake.nix  .envrc  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  ECOSYSTEM.md  FAQ.md  GLOSSARY.md  README.md  build-dependencies.just  build.sh  cliff.toml  deny.toml  devenv.nix  dist-workspace.toml  dprint.json  flake.nix  justfile  maskfile.md  platform-settings.toml  release-plz.toml  typos.toml
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  install-arm-linkers.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: audit.yml  breaking_changes.yml  build-pr.yaml  check-and-lint.yaml  ci.yml  compat.yml  cross-ci.yml  lint-docs.yml  lint-markdown-toml.yaml  nightly.yml  prebuilt-pr.yml  release-cd.yml  release-ci.yml  release-image.yml  release-plz.yml  release-pr.yml  release.yaml  release.yml  tests.yaml  triage.yml  update-completions.yml
assets/: Logo.afdesign
changelog/: 0.2.1.txt  0.2.2.txt  0.2.3.txt  0.2.txt  0.3.0.txt  0.3.1.txt  0.3.2.txt  0.4.0.txt  0.4.1.txt  0.4.2.txt  0.4.3.txt  0.4.4.txt  0.5.0.txt  0.5.1.txt  0.5.2.txt  0.5.3.txt  0.5.4.txt  new.txt
config/: README.md  S3_iDrive.toml  copy_example.toml  full-one.toml  full.toml  hooks.toml  local.toml  opendal-source.toml  opendal.toml  ovh-hot-cold.toml  par2.toml  rustic.toml  s3.toml  sftp.toml  simple.toml  stdin-command.toml
config/services/: b2.toml  gdrive.toml  opendal_owncloud_webdav.toml  opendal_webdav.toml  pcloud.toml  rclone_ovh-hot-cold.toml  s3.toml  s3_aws.toml  s3_idrive.toml  sftp.toml  sftp_hetzner_sbox.toml  webdav.toml  webdav_owncloud_nextcloud.toml
crates/: Readme.md
crates/rustic_core/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/rustic_core/examples/: backup.rs  check.rs  config.rs  copy.rs  forget.rs  init.rs  key.rs  ls.rs  merge.rs  prune.rs  restore.rs  tag.rs
crates/rustic_core/src/: archiver.rs  backend.rs  blob.rs  cdc.rs  chunker.rs  commands.rs  crypto.rs  error.rs  file.rs  helpers.rs  id.rs  index.rs  lib.rs  progress.rs  repofile.rs  repository.rs
crates/rustic_core/src/archiver/: file_archiver.rs  parent.rs  tree.rs  tree_archiver.rs
crates/rustic_core/src/backend/: cache.rs  choose.rs  decrypt.rs  dry_run.rs  hotcold.rs  ignore.rs  local.rs  mock.rs  node.rs  rclone.rs  rest.rs  s3.rs  stdin.rs
crates/rustic_core/src/blob/: packer.rs  tree.rs
crates/rustic_core/src/cdc/: README.md  polynom.rs  rolling_hash.rs
crates/rustic_core/src/commands/: backup.rs  cat.rs  check.rs  config.rs  copy.rs  dump.rs  forget.rs  init.rs  key.rs  merge.rs  prune.rs  repair.rs  repoinfo.rs  restore.rs  snapshots.rs
crates/rustic_core/src/commands/repair/: index.rs  snapshots.rs
crates/rustic_core/src/crypto/: aespoly1305.rs  hasher.rs
crates/rustic_core/src/index/: binarysorted.rs  indexer.rs
crates/rustic_core/src/repofile/: configfile.rs  indexfile.rs  keyfile.rs  packfile.rs  snapshotfile.rs
crates/rustic_core/src/repository/: warm_up.rs
crates/rustic_core/tests/: public_api.rs
crates/rustic_core/tests/public_api_data/: public-api_linux.txt  public-api_win.txt
crates/rustic_testing/: Cargo.toml
doc/: 010_introduction.rst  020_installation.rst  030_preparing_a_new_repo.rst  040_backup.rst  comparison-restic.md
docs/: FAQ.md  Readme.md  comparison-restic.md  openapi.json
docs/design/: personas.md  requirements.md  use_cases.md  user_stories.md
docs/dev/: development_guide.md  release_guide.md  testing_guide.md
docs/screenshots/: gettingstarted.yaml
examples/: copy_example.toml  full.toml  local.toml  ovh-hot-cold.toml  par2.toml  rustic.toml
scripts/: build.sh
src/: application.rs  archiver.rs  chunker.rs  commands.rs  config.rs  error.rs  filtering.rs  helpers.rs  id.rs  lib.rs  main.rs  prometheus.rs  repository.rs
src/archiver/: archiver.rs  archiver_impl.rs  file_archiver.rs  mod.rs  parent.rs  tree.rs  tree_archiver.rs
src/backend/: cache.rs  choose.rs  decrypt.rs  dry_run.rs  hotcold.rs  ignore.rs  local.rs  mod.rs  node.rs  rclone.rs  rest.rs  stdin.rs  tar.rs
src/blob/: mod.rs  packer.rs  tree.rs
src/cdc/: LICENSE.txt  README.md  mod.rs  polynom.rs  rolling_hash.rs
src/commands/: backup.rs  cat.rs  check.rs  check_config.rs  completions.rs  config.rs  configfile.rs  copy.rs  diff.rs  docs.rs  dump.rs  find.rs  forget.rs  helpers.rs  init.rs  key.rs  list.rs  lock.rs  ls.rs  merge.rs  merge_cmd.rs  mod.rs  mount.rs  prune.rs  repair.rs  repoinfo.rs  restore.rs  rewrite.rs  rustic_config.rs  self_update.rs  setup.rs  show_config.rs  snapshots.rs  tag.rs  tui.rs  version.rs  webdav.rs
src/config/: hooks.rs  logging.rs  progress_options.rs
src/crypto/: aespoly1305.rs  hasher.rs  mod.rs
src/index/: binarysorted.rs  boom.rs  hashmap.rs  indexer.rs  indexfiles.rs  mod.rs
src/metrics/: mod.rs  opentelemetry.rs  prometheus.rs
src/repo/: config.rs  configfile.rs  index.rs  indexfile.rs  key.rs  keyfile.rs  mod.rs  packfile.rs  snapshot.rs  snapshotfile.rs
src/repofile/: configfile.rs  indexfile.rs  keyfile.rs  mod.rs  packfile.rs  snapshotfile.rs
src/repository/: mod.rs
src/snapshots/: rustic_rs__config__tests__default_config_display_passes.snap  rustic_rs__config__tests__default_config_passes.snap  rustic_rs__config__tests__global_env_roundtrip_passes-2.snap  rustic_rs__config__tests__global_env_roundtrip_passes-3.snap  rustic_rs__config__tests__global_env_roundtrip_passes.snap
src/visual/: table.rs
supply-chain/: audits.toml  config.toml
test-bats/: run-tests.sh  simple.bats
tests/: backup_restore.rs  check_config.rs  completions.rs  config.rs  hooks.rs  repositories.rs  show-config.rs
tests/completions-fixtures/: bash.txt  fish.txt  powershell.txt  zsh.txt
wix/: main.wxs
xtask/: Cargo.toml
xtask/src/: helpers.rs  lib.rs  main.rs  tasks.rs
xtask/src/tasks/: bloat.rs  coverage.rs  install_deps.rs  timings.rs
(+73 files in other folders)
