[package]
publish = false
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
duct = "0.13.6"
fs_extra = "1.3.0"
glob = "0.3.1"
dialoguer = "0.10.4"
