[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer = "0.11.0"
duct = "0.13.7"
fs_extra = "1.3.0"
glob = "0.3.1"
